# overwatch

./: .gitignore  ADMIN_DROPDOWN_FIX.md  ADMIN_INTERFACE_FIXES.md  ADMIN_INTERFACE_GUIDE.md  ADMIN_PANEL_FIXES.md  ADMIN_PANEL_READY.md  AI_VISUALIZATION_FEATURE.md  ALARM_MANAGER_EXPANSION.md  AUDIO_PROCESSING_READY.md  BACKEND_AUDIO_VU_IMPLEMENTATION.md  BACKEND_INTEGRATION_COMPLETE.md  BRANCH_DEPLOYMENT_STRATEGY.md  CAPABILITIES.md  CHROME_EXTENSION_COMPLETE.md  CHROME_EXTENSION_READY.md  COMPLETE_SYSTEM_SUMMARY.md  CORS_FIX_SUMMARY.md  CPP_PREPROCESSING_SUMMARY.md  DEBUG_CONSOLE_FIX_SUMMARY.md  DETECTION_FILTER_NODE.md  DEVICE_FEDERATION_GUIDE.md  DEVICE_MANAGEMENT_QUICKSTART.md  DOCUMENTATION_INDEX.md  FEATURES_COMPLETE.md  FINAL_IMPLEMENTATION_SUMMARY.md  GITHUB_DEPLOYMENT.md  GPU_ACCELERATION.md  HAILO_COMPLETE_INTEGRATION.md  HAILO_INTEGRATION.md  HAILO_VERIFICATION.md  HIERARCHY_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_MODELS.md  IMPLEMENTATION_SUMMARY_DEVICE_FEDERATION.md  LICENSE  LIVE_MONITOR_READY.md  MODELS_QUICK_REFERENCE.md  MONTH_1_FEATURES_COMPLETE.md  NEW_MODELS_SUMMARY.md  NEW_NODES_ADDED.md  (+41 more)
backend/: __init__.py  main.py
backend/cpp_preproc/: .gitignore  CMakeLists.txt  README.md  build.sh  frame_processor.cpp  frame_processor.hpp  python_bindings.cpp  test_processor.py
chrome-extension/: .gitignore  INSTALL.md  QUICKSTART.md  README.md  TEST_CHECKLIST.md  background.js  content.js  generate_icons.py  generate_icons.sh  manifest.json  options.html  options.js  popup.html  popup.js
config/: cameras.example.yaml  device.json  drone_workflows.example.yaml  federation.example.yaml  geofences.yaml  hailo_model_config.yaml  hierarchy.example.yaml  hierarchy.yaml  meshtastic.yaml  model_examples.json  model_examples.yaml  unifi.example.yaml  workflow_config.json  workflows.example.yaml  workflows_hailo.yaml  xray_hailo_config.yaml
docs/: ADMIN_UNIFI_COMPLETE.md  AI_MODELS.md  ALARM_EXPANSION_SUMMARY.md  ALARM_GUI_FEATURES.md  ALARM_HIERARCHY_VIEWS.md  API.md  ARCHITECTURE.md  AUDIO_PROCESSING_GUIDE.md  CONFIG_NODE_GUIDE.md  CPP_PREPROCESSING.md  DEVELOPMENT.md  ENHANCED_NODES_COMPLETE.md  FEDERATION.md  FRAME_ROUTING.md  IMPLEMENTATION_SUMMARY.md  LIVE_WORKFLOW_MONITOR.md  MEDIABUNNY.md  NODE_STATUS_REPORT.md  PERFORMANCE.md  alarm.md  (+8 more)
(+206 files in other folders)
